--- a/style.css
+++ b/style.css
@@ -2,3 +2,7 @@ h1 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: rebeccapurple;
 }
+
+ol {
+    font-size: 32px;
+}
